--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,34 @@
   width: 100%;
 }
 
+/*******************************/
+/* GITHUB CONTRIBUTION SECTION */
+/*******************************/
+.github-contribution-section {
+  padding: 9.6rem 0;
+}
+
+.scroll-container {
+  display: grid;
+  justify-content: center;
+  overflow-x: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  white-space: nowrap;
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+svg {
+  height: auto;
+}
+.day-label {
+  text-transform:uppercase;
+  font-size: 10px;
+  fill: #767676;
+}
+
 /**************************/
 /* CTA SECTION */
 /**************************/
@@ -287,7 +315,7 @@
   /* padding: 9.6rem 0 12.8rem 0; */
 
   /* top / horizontal / left */
-  padding: 4.8rem 0 12.8rem;
+  padding: 10rem 0 12.8rem;
 }
 
 .cta {
